feat: implement user authentication and models with database support