@@ -1,86 +1,16 @@
 # Changelog
 
-All notable changes made during the recent hardening/audit work are documented here.
+All notable changes to this project will be documented in this file.
 
-## 2026-06-14
-
-### Added
-- Complete Java Swing Graphical User Interface (GUI) replacement for the legacy CLI.
-- New `ui` package containing:
-  - `RoleSelectionFrame`
-  - `CustomerDashboardFrame`
-  - `CartFrame`
-  - `AdminDashboardFrame` (replaced `MerchantDashboardFrame`)
-- Real-time search functionality hooked to `MenuDAO.getAllMenuItems(searchTerm, sortBy)` via `ILIKE`.
-- Dropdown sorting options (by Name, Price, Quantity) for both Customer and Admin Dashboards.
-- Live database queries displaying results in a dynamic GridLayout and JTable natively.
-- Integrated `FlatMacDarkLaf` (FlatLaf) for a modern, macOS-inspired system-wide Dark Mode.
-- Stripped hardcoded `Color` overrides from all GUI frames to allow native Look and Feel (LaF) rendering and rounded corners.
-
-### Changed
-- Refactored `CustomerDashboardFrame` to mimic modern food delivery applications.
-- Sunset the old text-based `MerchantDashboardFrame` and replaced it with a modern `AdminDashboardFrame` featuring `CardLayout`.
-- Renamed the polymorphic order fulfillment interface from `orders.OrderDAO` to `orders.OrderType` to accurately reflect its role and prevent naming collision.
-- Renamed the database handler `database.OrderDAO` to `database.TransactionDAO` to better represent its role in executing ACID checkout transactions and generating receipts.
-
-### Fixed
-- Suppressed `java.lang.System::load` native access warnings from FlatLaf (when running on Java 22+) by configuring `.vscode/launch.json` and `.vscode/settings.json` with `--enable-native-access=ALL-UNNAMED`.
-
-## 2026-05-27
+## [1.1.0] - 2026-06-14
 
 ### Added
-- Automatic `.env` loader (dependency-free)
-  - New: `Main/config/Dotenv.java`
-  - Auto-loads `.env` (searched upward from working directory) and maps:
-    - `POS_DB_URL` → `pos.db.url`
-    - `POS_DB_USER` → `pos.db.user`
-    - `POS_DB_PASSWORD` → `pos.db.password`
-    - `POS_ADMIN_PIN` → `pos.admin.pin`
-  - Does **not** override existing JVM `-D...` properties or existing OS environment variables.
-
-- Audit trail (DB-backed)
-  - New migration: `db/create_audit_table.sql` (creates `audit_logs` + indexes)
-  - New runtime smoke test: `Main/database/AuditTrail.java` (inserts then deletes a test audit row)
+- **Authentication System**: Integrated Supabase `public.users` table.
+- **REST API Endpoints**: Added `AuthController` providing `/api/auth/register` and `/api/auth/login`.
+- **User Models**: Added `Person.java` and `User.java` to enforce Object-Oriented Principles (Inheritance and Encapsulation).
+- **User Database Access**: Created `UserDAO` interface and `UserDAOImpl` (Abstraction and Polymorphism).
 
 ### Changed
-- Database config hardening
-  - `Main/database/DatabaseHelper.java` no longer relies on hardcoded secrets.
-  - Reads DB config from env vars / JVM properties; provides clear missing-config errors.
-
-- Supabase pooler / PgBouncer compatibility
-  - `Main/database/DatabaseHelper.java` automatically appends `preferQueryMode=simple` for pooler-looking URLs
-    to avoid prepared-statement issues.
-
-- JDBC driver robustness
-  - `Main/database/DatabaseHelper.java` now attempts to load `org.postgresql.Driver` and rethrows a clearer
-    error for the common runtime failure: `No suitable driver found ...` (missing jar on classpath).
-
-- Admin PIN default
-  - `Main/Main/Main.java` default admin PIN is now **9876** (still overrideable via `POS_ADMIN_PIN` / `-Dpos.admin.pin`).
-
-- Menu item creation now audited
-  - `Main/Main/MenuManager.java`
-    - Insert uses `RETURNING id` to capture the created `menu_items.id`.
-    - Writes `MENU_ITEM_CREATED` audit row in the same transaction.
-  - `Main/Main/Main.java` calls `MenuManager.addMenuItem(newItem, "admin")`.
-
-- Checkout flow now audited
-  - `Main/database/TransactionDAO.java`
-    - Success path writes `ORDER_CHECKOUT` audit row inside the checkout transaction.
-    - Failure path writes best-effort `ORDER_CHECKOUT_FAILED` audit row after rollback.
-
-- Admin access attempts now audited
-  - `Main/Main/Main.java` logs `ADMIN_PIN_ATTEMPT` with `{ "success": true|false }` (does not log the PIN).
-
-### Fixed
-- Checkout stock race/oversell prevention
-  - `Main/database/TransactionDAO.java` uses `SELECT ... FOR UPDATE` to lock stock rows and re-check stock inside the transaction.
-
-### Verification (manual/CLI)
-- Compile:
-  - `javac` compiled all `*.java` into `Main/out` successfully.
-- Smoke tests (with PostgreSQL JDBC jar on runtime classpath):
-  - `database.DatabaseHelper` (DB connectivity)
-  - `database.AuditTrail` (audit insert + cleanup)
-  - `Main.Main` (View Full Live Menu → Exit)
-
+- **Receipt Modal UI**: `CheckoutModal.tsx` now correctly parses the JSON response from the backend to display the authentic `transactionId` generated by Supabase (e.g., `TXN-XXXX-DELIVERY`) instead of a local random placeholder.
+- **Order Controller**: Refactored `OrderController.java` to return a detailed JSON response upon checkout containing the successful transaction's ID.
+- **Transaction DAO**: Refactored `TransactionDAO.processCheckout()` to return the generated `txnId` string rather than a simple boolean.
